--- a/index.html
+++ b/index.html
@@ -9,7 +9,51 @@
 
     <nav>
       <p>
-        <a class ="navigate" href = "#">Home</a>
-        
+        <div class ="navigate"/>
+          <a href = "#home">Home</a></br>
+          <a href = "#process">Process</a></br>
+          <a href = "#work">Work</a></br>
+          <a href = "#team">Team</a></br>
+          <a href = "#contact">Contact</a></br>
+        </div>
+      </p>
+    </nav>
+    <div id ="process"
+    <h3>Our Process</h3></br>
+    <img src="./resources/images/identify.svg"/>
+    <h2>Identify</h2>
+    <p>We focus on the most important details.</p>
+    <img src="./resources/images/understand.svg"/>
+    <h2>Understand</h2>
+    <p>We study our projects inside and out.</p>
+    <img src="./resources/images/execute.svg"/>
+    <h2>Execute</h2>
+    <p>We put everything we have into our work.</p>
+    </div>
+
+    <div id = "team"/>
+    <h2 id = "banner">Designed In New York</h2>
+
+    <h2>Portfolio</h2>
+    <p>Coming Soon</p>
+
+    <h2>Team</h2>
+    <p>We're Hiring</p>
+
+    <h2>Contact</h2>
+    <p>Phone: (555)-555-5555</br>E-mail: test@example.com</br>Twitter: @test</p>
+    </div>
+
+    <div class = "footer"</div>
+      <p>&copy Broadway 2017
+      <span>
+      <a href = "#home">Home</a>
+      <a href = "#">About</a>
+      <a href = "#work">Work</a>
+      <a href = "#team">Team</a>
+      <a href = "#contact">Contact</a>
+      </span>
+    </div>
+
   </body>
 </html>
