--- a/index.html
+++ b/index.html
@@ -2,23 +2,21 @@
 <html>
   <head>
     <title>Broadway Design</title>
-    <link href=".resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class = "header">
     <h1>Broadway Design</h1>
-
-    <nav>
       <p>
-        <div class ="navigate"/>
-          <a href = "#home">Home</a></br>
-          <a href = "#process">Process</a></br>
-          <a href = "#work">Work</a></br>
-          <a href = "#team">Team</a></br>
-          <a href = "#contact">Contact</a></br>
-        </div>
+          <a class = "navhead" href = "#home">Home</a></br>
+          <a class = "navhead" href = "#process">Process</a></br>
+          <a class = "navhead" href = "#work">Work</a></br>
+          <a class = "navhead" href = "#team">Team</a></br>
+          <a class = "navhead" href = "#contact">Contact</a></br>
       </p>
-    </nav>
-    <div id ="process"
+   </div>
+
+    <div id ="process">
     <h3>Our Process</h3></br>
     <img src="./resources/images/identify.svg"/>
     <h2>Identify</h2>
@@ -31,9 +29,11 @@
     <p>We put everything we have into our work.</p>
     </div>
 
-    <div id = "team"/>
-    <h2 id = "banner">Designed In New York</h2>
 
+    <h2 class = "banner">Designed In New York</h2>
+
+    <div id = "team">
+    <div id = "contact">
     <h2>Portfolio</h2>
     <p>Coming Soon</p>
 
@@ -44,15 +44,14 @@
     <p>Phone: (555)-555-5555</br>E-mail: test@example.com</br>Twitter: @test</p>
     </div>
 
-    <div class = "footer"</div>
+    <div class = "footer">
       <p>&copy Broadway 2017
-      <span>
-      <a href = "#home">Home</a>
-      <a href = "#">About</a>
-      <a href = "#work">Work</a>
-      <a href = "#team">Team</a>
-      <a href = "#contact">Contact</a>
-      </span>
+      <a class = "navhead"href = "#home">Home</a>
+      <a class = "navhead"href = "#">About</a>
+      <a class = "navhead"href = "#work">Work</a>
+      <a class = "navhead"href = "#team">Team</a>
+      <a class = "navhead"href = "#contact">Contact</a>
+    </p>
     </div>
 
   </body>
